--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -70,7 +70,7 @@
         {%- if user.id == current_user.id -%}
           {{user_profile(user, current_user, consent_agreements, user_interventions)}}
         {%- else -%}
-          {{profile(user, current_user, consent_agreements, user_interventions)}}
+          {{profile(user, current_user, consent_agreements, user_interventions, invite_email)}}
         {%- endif -%}
           <br/><br/>
       </div>
