initial queries - fix for check for required terms other than general terms of use

--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -767,7 +767,7 @@ $(document).ready(function(){
           config: "website_terms_of_use,subject_website_consent,privacy_policy",
           subsections: {
             "termsCheckbox": {
-                fields: [$("[data-type='terms'][data-required='true']")],
+                fields: [$("[data-type='terms'][data-required='true']"), $("[data-type='terms']").has("*[data-required='true']")],
                 event: termsEvent
             }
         }
