ignore pagination during table export

--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -33,6 +33,7 @@
                data-toolbar="#adminTableToolbar"
                data-show-toggle="true"
                data-show-export="true"
+               data-export-data-type="all"
                data-filter-control="true"
                data-show-columns="true">
             <thead>
