--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -44,6 +44,7 @@
              data-id-field="id"
              data-filter-control="true"
              data-show-export="true"
+             data-export-data-type="all"
              >
           <thead>
               <tr>
