--- a/portal/templates/research.html
+++ b/portal/templates/research.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block main %}
-<h4 class="tnth-headline">Research Dashboard</h4>
+<h4 class="tnth-headline">Research Data</h4>
 <br/>
 <hr/>
 {% if config.STAFF_BULK_DATA_ACCESS %}
