--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -95,7 +95,7 @@
                             <li><a href="{{PORTAL}}/reporting">{{ _("Reporting Dashboard") }}</a></li>
                             {% endif %}
                             {% if user and user.has_role(ROLE.RESEARCHER) %}
-                            <li><a href="{{PORTAL}}/research">{{ _("Research Dashboard") }}</a></li>
+                            <li><a href="{{PORTAL}}/research">{{ _("Research Data") }}</a></li>
                             {% endif %}
                             <li><a href="{{PORTAL}}/logout">{{ _("Log Out of TrueNTH") }}</a></li>
                         </ul>
@@ -139,6 +139,9 @@
                     <li><a href="{{PORTAL}}/settings">{{ _("Settings") }}</a></li>
                     {% endif %}
                     {% if user and (user.has_role(ROLE.ADMIN) or user.has_role(ROLE.ANALYST)) %}<li><a href="{{PORTAL}}/reporting">{{ _("Reporting Dashboard") }}</a></li>{% endif %}
+                    {% if user and user.has_role(ROLE.RESEARCHER) %}
+                    <li><a href="{{PORTAL}}/research">{{ _("Research Data") }}</a></li>
+                    {% endif %}
                     {% if user %}<li><a href="{{PORTAL}}/logout">{{ _("Log Out of TrueNTH") }}</a></li>{% endif %}
                 </ul>
             </div>
