fix consent withdrawn verbiage, organization check in profile fix

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -2436,6 +2436,11 @@ div.biopsy-option:last-of-type{
   top:-2px;
 }
 
+.withdrawn-label:before,
+.withdrawn-label::before {
+  content: "Withdrawn - Suspend Data Collection and Report Historic Data";
+}
+
 #consentDateEditContainer {
   margin-top: 2.5em;
 }
