--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -2261,6 +2261,10 @@ div.biopsy-option:last-of-type{
   position: relative;
   top: -2px;
 }
+.withdrawn-label:before,
+.withdrawn-label::before {
+  content: "Withdrawn - Suspend Data Collection and Report Historic Data";
+}
 #consentDateEditContainer {
   margin-top: 2.5em;
 }
