--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -2095,6 +2095,10 @@ sub.pointer:hover {
   position: relative;
   top: -2px;
 }
+.withdrawn-label:before,
+.withdrawn-label::before {
+  content: "Suspend Data Collection and Report Historic Data";
+}
 #profileConsentList {
   font-size: 0.95em;
   max-width: 100%;
