--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -2273,6 +2273,11 @@ color: #777
   top:-2px;
 }
 
+.withdrawn-label:before,
+.withdrawn-label::before {
+  content: "Suspend Data Collection and Report Historic Data";
+}
+
 #profileConsentList {
   font-size: @mediumText;
   max-width: 100%;
