--- a/portal/templates/sessionReport.html
+++ b/portal/templates/sessionReport.html
@@ -1,10 +1,8 @@
 {% extends "layout.html" %}
 {% from "flask_user/_macros.html" import back_btn, footer %}
 {% block main %}
-{% from "profile_macros.html" import profileAssessment %}
-
 <br/>
-<div  id="userSessionReportDetailHeader" class="report-custom-header gradient">
+<div id="userSessionReportDetailHeader" class="report-custom-header gradient">
 	<span class="left">
 	<h4>{{ _("Assessment Report Detail") }}</h4>
 	<h4 class="text-muted">{{ _("Patient") }} #{{user.id}} - {{user.first_name}}  {{user.last_name}}</h4>
@@ -18,14 +16,24 @@
 <div class="container">
 	<div class="row" style="position: relative;">
 	    <div class="col-md-12">
-	       	{{profileAssessment(user, instrument_id, authored_date)}}
+	    	<div id="userSessionReportDetail" cellpadding="2">
+		        <input type="hidden" id="_report_user_id" value="{{user.id if user}}" />
+		        <input type="hidden" id="_report_authored_date" value="{{authored_date}}" />
+		        <input type="hidden" id="_report_instrument_id" value="{{instrument_id}}" />
+		        <table class="tnth-admin-table table table-condensed table-striped table-bordered small-text" id="userSessionReportDetailTable"></table><br/>
+		    </div>
 	    </div>
 	</div>
 </div>
-
-
 {% endblock %}
 {% block footer %}
 {{footer(user=current_user)}}
+{% endblock %}
+{% block document_ready %}
+$(function() {
+	tnthAjax.assessmentReport($("#_report_user_id").val(), $("#_report_instrument_id").val(), function(data) {
+       fillContent.assessmentReport(data);
+    });
+});
 {% endblock %}
 
